--- a/new_earth/src/pages/faith/faith.css
+++ b/new_earth/src/pages/faith/faith.css
@@ -17,3 +17,16 @@
   margin-top: 3rem;
   padding: 0 10rem;
 }
+
+.footer {
+  text-align: center;
+  padding: 3rem 2rem;
+  margin-top: 4rem;
+}
+
+.footer p {
+  margin: 0;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: gold;
+}
